log
Sat 25 Mar 2023 03:48:07 PM UTC: 
 tests:  0|6
total_score: 0/70
8074aa1
Sat 25 Mar 2023 03:55:02 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |   list->head = NULL
      |   ^~~~
      |   List
list.c:33:3: note: each undeclared identifier is reported only once for each function it appears in
list.c:34:5: error: expected ‘;’ before ‘return’
   34 |     return list;
      |     ^~~~~~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0604b6e
Sat 25 Mar 2023 03:55:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:7: error: expected identifier or ‘(’ before ‘->’ token
   33 |   List->head = NULL
      |       ^~
list.c:35:1: error: control reaches end of non-void function [-Werror=return-type]
   35 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9172db4
Sat 25 Mar 2023 04:04:20 PM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:26: error: too few arguments to function ‘calloc’
   33 |   List * lista = (List *)calloc(sizeof(List));
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
4083246
Sat 25 Mar 2023 04:04:29 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
5bebf02
Sat 25 Mar 2023 04:16:27 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
6626892
Sat 25 Mar 2023 04:17:02 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
a8bb5e8
Sat 25 Mar 2023 04:19:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
7d1809c
Sat 25 Mar 2023 04:20:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c:42:1: error: expected identifier or ‘(’ before ‘void’
   42 | void * firstList(List * lista)
      | ^~~~
Compilation failed
6d120c0
